# libsignal

./: .clang-format  CMakeLists.txt  COPYING  README.md  format.sh
demo/: c_demo.c  cpp_demo.cpp
src/: csignal.h  libsignal.h  signal.cpp  signal.hpp  types.h
tests/: main.cpp  test.cpp
